version/0.20/_sources/api/solver/_autosummary/settings/dual_electric_conductivity.rst.txt
:orphan:

.. _dual_electric_conductivity:

dual_electric_conductivity
==========================

.. autoclass:: ansys.fluent.core.solver.settings_241.dual_electric_conductivity.dual_electric_conductivity
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_7>`                                           Select method for calculating material property.

:ref:`value <value_3>`                                                         Specify the constant property value.

:ref:`piecewise_linear <piecewise_linear_1>`               Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                           Specify piecewise-polynomial settings.

:ref:`polynomial <polynomial_1>`                                                   Specify polynomial coefficients.

:ref:`expression <expression>`                                         Specify the property value as an expression.

:ref:`user_defined_function <user_defined_function>`                                 'user_defined_function' child.

====================================================   ============================================================

.. rubric:: Included in:

====================================   ===================================

Parent                                                             Summary

====================================   ===================================
:ref:`fluid_child <fluid_child>`             'child_object_type' of fluid.

:ref:`solid_child <solid_child>`             'child_object_type' of solid.

:ref:`mixture_child <mixture_child>`       'child_object_type' of mixture.

====================================   ===================================

